Shorten vertical margins for Communities and dash Shortened the margin-bot for communities and dashboard to prevent having to scroll down a bit when stretched to full

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
     margin-left: 5px;
     font-family: 'Roboto', sans-serif;
     font-size: 2.2rem;
-    margin-bottom: 3rem;
+    margin-bottom: 2.7rem;
     margin-right: 1rem;
 }
 
@@ -90,5 +90,5 @@ body {
 }
 
 .settings {
-    margin-top: 4rem;
+    margin-top: 2.7rem;
 }
